# goit-pyweb-hw-13-2

./: pyproject.toml  readme.md
quotes/quotes/: settings.py  urls.py
quotes/quotes_app/: forms.py  models.py  urls.py  views.py
quotes/quotes_app/migrations/: 0001_initial.py
quotes/quotes_app/static/quotes_app/: styles.css
quotes/quotes_app/templates/quotes_app/: author_add.html  author_info.html  base.html  index.html  quote_add.html  quotes_tag.html  top-tags.html
quotes/quotes_app/templatetags/: extract.py
quotes/users/: forms.py  urls.py  views.py
quotes/users/templates/users/: password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  signin.html  signout.html  signup.html
quotes/utils/: config.ini  migration.py
